--- a/config/example_config.json
+++ b/config/example_config.json
@@ -55,21 +55,24 @@
             "alias": "low",
             "provider": "openrouter",
             "endpoint": "openai/gpt-5-nano",
-            "max_context_tokens": 400000
+            "max_context_tokens": 400000,
+            "max_output_tokens": 128000
         },
         "gpt5_mini": {
             "name": "GPT-5 Mini",
             "alias": "medium",
             "provider": "openrouter",
             "endpoint": "openai/gpt-5-mini",
-            "max_context_tokens": 400000
+            "max_context_tokens": 400000,
+            "max_output_tokens": 128000
         },
         "gpt5": {
             "name": "GPT-5",
             "alias": "high",
             "provider": "openrouter",
             "endpoint": "openai/gpt-5",
-            "max_context_tokens": 400000
+            "max_context_tokens": 400000,
+            "max_output_tokens": 128000
         }
     }
 }
