--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,18 @@
-pytest>=8.0.0,<9.0.0
-fastapi>=0.115.0,<1.0.0
-uvicorn>=0.30.0,<1.0.0
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.1
+click==8.3.1
+fastapi==0.128.8
+h11==0.16.0
+idna==3.11
+iniconfig==2.3.0
+packaging==26.0
+pluggy==1.6.0
+pydantic==2.12.5
+pydantic_core==2.41.5
+Pygments==2.19.2
+pytest==8.4.2
+starlette==0.52.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+uvicorn==0.40.0
