--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,11 @@ idna==3.11
 iniconfig==2.3.0
 packaging==26.0
 pluggy==1.6.0
+lxml==6.0.2
 pydantic==2.12.5
 pydantic_core==2.41.5
 Pygments==2.19.2
+python-docx==1.2.0
 pytest==8.4.2
 starlette==0.52.1
 typing-inspection==0.4.2
