--- a/config/example_config.json
+++ b/config/example_config.json
@@ -30,10 +30,77 @@
     },
     "memory": {
         "session_event_logging_enabled": false,
-        "autoload_summary_days": 2
+        "autoload_summary_days": 2,
+        "session_ttl_minutes": 720,
+        "max_active_sessions": 24
     },
     "agent_loop": {
-        "max_concurrent_workers": 3
+        "max_concurrent_workers": 3,
+        "max_events_per_worker": 200,
+        "completed_worker_retention": 200
+    },
+    "central_service": {
+        "enabled": false,
+        "poll_interval_sec": 60,
+        "task_runner_concurrency": 2,
+        "scheduler_db_path": "memory/central/zubot_core.db",
+        "worker_slot_reserve_for_workers": 2,
+        "run_history_retention_days": 30,
+        "run_history_max_rows": 5000,
+        "memory_manager_sweep_interval_sec": 43200,
+        "memory_manager_completion_debounce_sec": 300,
+        "queue_warning_threshold": 25,
+        "running_age_warning_sec": 1800
+    },
+    "task_agents": {
+        "profiles": {
+            "indeed_daily_search": {
+                "name": "Indeed Daily Search",
+                "instructions_template": "Run scheduled Indeed search workflow and store results.",
+                "model_alias": "medium",
+                "tool_access": [
+                    "get_indeed_jobs",
+                    "append_job_app_row",
+                    "list_job_app_rows",
+                    "create_and_upload_docx"
+                ],
+                "skill_access": [],
+                "preload_files": [],
+                "metadata": {
+                    "domain": "job_search"
+                }
+            }
+        },
+        "schedules": [
+            {
+                "schedule_id": "sched_indeed_daily_search",
+                "profile_id": "indeed_daily_search",
+                "enabled": false,
+                "mode": "interval",
+                "run_frequency_minutes": 1440,
+                "max_runtime_sec": 1800
+            },
+            {
+                "schedule_id": "sched_indeed_daily_2am",
+                "profile_id": "indeed_daily_search",
+                "enabled": false,
+                "mode": "calendar",
+                "timezone": "America/New_York",
+                "time_of_day": "02:00",
+                "days_of_week": [
+                    "mon",
+                    "tue",
+                    "wed",
+                    "thu",
+                    "fri",
+                    "sat",
+                    "sun"
+                ],
+                "catch_up_window_minutes": 180,
+                "run_frequency_minutes": 1440,
+                "max_runtime_sec": 1800
+            }
+        ]
     },
     "filesystem": {
         "default_access": "deny",
