Migrate daily memory to SQLite-backed pipeline
Migrated daily memory runtime storage to SQLite (zubot_core.db) for both raw events and summary snapshots.
Updated summarization pipeline to read raw memory rows from DB and write daily summaries back to DB.
Kept queue-based summary execution (memory_summary_jobs) and day status tracking (day_memory_status) in the same DB.
Added ingest-time signal filtering (focus on user/main-agent and meaningful task outcomes) plus summarizer-time defensive filtering.
Added legacy import from *.md and *.md into DB-backed tables.
Updated docs (README, memory/core/schema/system design) and validated with tests (python -m pytest -q, 226 passed).

--- a/config/example_config.json
+++ b/config/example_config.json
@@ -32,7 +32,11 @@
         "session_event_logging_enabled": false,
         "autoload_summary_days": 2,
         "session_ttl_minutes": 720,
-        "max_active_sessions": 24
+        "max_active_sessions": 24,
+        "realtime_summary_turn_threshold": 1,
+        "summary_worker_poll_sec": 15,
+        "summary_worker_max_jobs_per_tick": 1,
+        "daily_summary_use_model": false
     },
     "agent_loop": {
         "max_concurrent_workers": 3,
