--- a/config/example_config.json
+++ b/config/example_config.json
@@ -129,8 +129,12 @@
             "site": "https://openrouter.ai/",
             "base_url": "https://openrouter.ai/api/v1/chat/completions",
             "timeout_sec": 30,
-            "retry_attempts": 3,
-            "retry_backoff_ms": 400,
+            "retry_attempts": 4,
+            "retry_backoff_schedule_sec": [
+                1,
+                3,
+                5
+            ],
             "referer": "https://your-app.example",
             "app_title": "Zubot"
         }
