--- a/config/example_config.json
+++ b/config/example_config.json
@@ -56,56 +56,6 @@
         "queue_warning_threshold": 25,
         "running_age_warning_sec": 1800
     },
-    "task_agents": {
-        "profiles": {
-            "indeed_daily_search": {
-                "name": "Indeed Daily Search",
-                "instructions_template": "Run scheduled Indeed search workflow and store results.",
-                "model_alias": "medium",
-                "tool_access": [
-                    "get_indeed_jobs",
-                    "append_job_app_row",
-                    "list_job_app_rows",
-                    "create_and_upload_docx"
-                ],
-                "skill_access": [],
-                "preload_files": [],
-                "metadata": {
-                    "domain": "job_search"
-                }
-            }
-        },
-        "schedules": [
-            {
-                "schedule_id": "sched_indeed_daily_search",
-                "profile_id": "indeed_daily_search",
-                "enabled": false,
-                "mode": "interval",
-                "run_frequency_minutes": 1440,
-                "max_runtime_sec": 1800
-            },
-            {
-                "schedule_id": "sched_indeed_daily_2am",
-                "profile_id": "indeed_daily_search",
-                "enabled": false,
-                "mode": "calendar",
-                "timezone": "America/New_York",
-                "time_of_day": "02:00",
-                "days_of_week": [
-                    "mon",
-                    "tue",
-                    "wed",
-                    "thu",
-                    "fri",
-                    "sat",
-                    "sun"
-                ],
-                "catch_up_window_minutes": 180,
-                "run_frequency_minutes": 1440,
-                "max_runtime_sec": 1800
-            }
-        ]
-    },
     "filesystem": {
         "default_access": "deny",
         "allow_read": [
@@ -130,11 +80,7 @@
             "base_url": "https://openrouter.ai/api/v1/chat/completions",
             "timeout_sec": 30,
             "retry_attempts": 4,
-            "retry_backoff_schedule_sec": [
-                1,
-                3,
-                5
-            ],
+            "retry_backoff_ms": 400,
             "referer": "https://your-app.example",
             "app_title": "Zubot"
         }
@@ -191,6 +137,16 @@
                 "default_upload_path": "Job Applications/Cover Letters",
                 "cover_letters_folder_id": "XXXXXX",
                 "timeout_sec": 15
+            }
+        }
+    },
+    "pre_defined_tasks": {
+        "tasks": {
+            "indeed_daily_search": {
+                "name": "Indeed Daily Search Routine",
+                "entrypoint_path": "src/zubot/predefined_tasks/indeed_daily_search.py",
+                "args": [],
+                "timeout_sec": 1800
             }
         }
     }
