fix chat context controls and history reload
- Replace chat controls with Reset Context and Normal Context
- Reset Context now clears UI + in-memory context only (keeps DB history)
- Normal Context now matches startup policy (rehydrate + show last N)
- Stop test contamination of default session chat history
- Keep history/context behavior consistent across rich and fallback UI

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ config/*
 !config/example_config.json
 /tasks/
 memory/*
+!memory/central/
+memory/central/*
+!memory/central/zubot_core.sql
 context/*
 !context/README.md
 personal_notes/
