--- a/config/example_config.json
+++ b/config/example_config.json
@@ -30,7 +30,9 @@
     },
     "memory": {
         "session_event_logging_enabled": false,
+        "legacy_daily_file_migration_enabled": false,
         "autoload_summary_days": 2,
+        "session_rehydrate_message_limit": 100,
         "session_ttl_minutes": 720,
         "max_active_sessions": 24,
         "realtime_summary_turn_threshold": 1,
@@ -75,6 +77,12 @@
         ]
     },
     "default_model_alias": "medium",
+    "model_aliases": {
+        "low": "gpt5_nano",
+        "med": "gpt5_mini",
+        "medium": "gpt5_mini",
+        "high": "gpt5"
+    },
     "model_providers": {
         "openrouter": {
             "alias": "openrouter",
@@ -91,7 +99,6 @@
     "models": {
         "gpt5_nano": {
             "name": "GPT-5 Nano",
-            "alias": "low",
             "provider": "openrouter",
             "endpoint": "openai/gpt-5-nano",
             "max_context_tokens": 400000,
@@ -99,7 +106,6 @@
         },
         "gpt5_mini": {
             "name": "GPT-5 Mini",
-            "alias": "medium",
             "provider": "openrouter",
             "endpoint": "openai/gpt-5-mini",
             "max_context_tokens": 400000,
@@ -107,7 +113,6 @@
         },
         "gpt5": {
             "name": "GPT-5",
-            "alias": "high",
             "provider": "openrouter",
             "endpoint": "openai/gpt-5",
             "max_context_tokens": 400000,
