--- a/src/zubot/predefined_tasks/indeed_daily_search/task_config.json
+++ b/src/zubot/predefined_tasks/indeed_daily_search/task_config.json
@@ -4,13 +4,93 @@
   "search_profiles": [
     {
       "profile_id": "software_engineer_columbus_oh",
-      "keyword": "software engineer",
+      "keyword": "Software Engineer",
       "location": "Columbus, OH"
     },
     {
       "profile_id": "software_engineer_cleveland_oh",
-      "keyword": "software engineer",
+      "keyword": "Software Engineer",
       "location": "Cleveland, OH"
+    },
+    {
+      "profile_id": "software_engineer_phoenix_az",
+      "keyword": "Software Engineer",
+      "location": "Phoenix, AZ"
+    },
+    {
+      "profile_id": "software_engineer_scottsdale_az",
+      "keyword": "Software Engineer",
+      "location": "Scottsdale, AZ"
+    },
+    {
+      "profile_id": "software_engineer_boulder_co",
+      "keyword": "Software Engineer",
+      "location": "Boulder, CO"
+    },
+    {
+      "profile_id": "software_engineer_denver_co",
+      "keyword": "Software Engineer",
+      "location": "Denver, CO"
+    },
+    {
+      "profile_id": "data_analytics_columbus_oh",
+      "keyword": "Data Analytics",
+      "location": "Columbus, OH"
+    },
+    {
+      "profile_id": "data_analytics_cleveland_oh",
+      "keyword": "Data Analytics",
+      "location": "Cleveland, OH"
+    },
+    {
+      "profile_id": "data_analytics_phoenix_az",
+      "keyword": "Data Analytics",
+      "location": "Phoenix, AZ"
+    },
+    {
+      "profile_id": "data_analytics_scottsdale_az",
+      "keyword": "Data Analytics",
+      "location": "Scottsdale, AZ"
+    },
+    {
+      "profile_id": "data_analytics_boulder_co",
+      "keyword": "Data Analytics",
+      "location": "Boulder, CO"
+    },
+    {
+      "profile_id": "data_analytics_denver_co",
+      "keyword": "Data Analytics",
+      "location": "Denver, CO"
+    },
+    {
+      "profile_id": "ai_engineer_columbus_oh",
+      "keyword": "AI Engineer",
+      "location": "Columbus, OH"
+    },
+    {
+      "profile_id": "ai_engineer_cleveland_oh",
+      "keyword": "AI Engineer",
+      "location": "Cleveland, OH"
+    },
+    {
+      "profile_id": "ai_engineer_phoenix_az",
+      "keyword": "AI Engineer",
+      "location": "Phoenix, AZ"
+    },
+    {
+      "profile_id": "ai_engineer_scottsdale_az",
+      "keyword": "AI Engineer",
+      "location": "Scottsdale, AZ"
+    },
+    {
+      "profile_id": "ai_engineer_boulder_co",
+      "keyword": "AI Engineer",
+      "location": "Boulder, CO"
+    },
+    {
+      "profile_id": "ai_engineer_denver_co",
+      "keyword": "AI Engineer",
+      "location": "Denver, CO"
     }
   ]
 }
