Harden task config + Drive folder routing
- Untrack local task config and add tracked example template.
- Add explicit task-level Drive folder ID routing for cover letter uploads.
- Improve cover letter filename readability and conflict suffixing.
- Add AI Notes schema flow and keep Notes user-only.
- Update docs/tests for new config and upload behavior.

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ personal_notes/
 dev_docs/
 devtools/
 outputs/
+src/zubot/predefined_tasks/indeed_daily_search/state/cover_letters/
+src/zubot/predefined_tasks/indeed_daily_search/task_config*.json
+!src/zubot/predefined_tasks/indeed_daily_search/task_config.example.json
