--- a/src/zubot/predefined_tasks/indeed_daily_search/task_config.example.json
+++ b/src/zubot/predefined_tasks/indeed_daily_search/task_config.example.json
@@ -5,12 +5,18 @@
   "seen_provider": "indeed",
   "extraction_model_alias": "medium",
   "decision_model_alias": "medium",
-  "cover_letter_model_alias": "high",
-  "invalid_schema_retry_limit": 1,
+  "cover_letter_model_alias": "medium",
+  "invalid_schema_retry_limit": 3,
   "project_context_top_n": 3,
   "project_context_max_chars": 2600,
   "cover_letter_destination_path": "Job Applications/Cover Letters",
+  "cover_letter_destination_folder_id": "YOUR_GOOGLE_DRIVE_FOLDER_ID",
+  "cover_letter_contact_email": "your.email@example.com",
+  "cover_letter_linkedin_url": "https://www.linkedin.com/in/your-profile",
+  "cover_letter_linkedin_label": "LinkedIn",
   "cover_letter_file_mode": "versioned",
+  "cover_letter_upload_retry_attempts": 3,
+  "cover_letter_upload_retry_backoff_sec": 1.0,
   "sheet_retry_attempts": 2,
   "sheet_retry_backoff_sec": 1.0,
   "search_profiles": [
