Fix seen-key recency and task timeout fallback
- switch seen-key preload ordering to first_seen_at DESC (first discovery recency)
- add task_seen_items(task_id, provider, first_seen_at DESC) index in runtime/schema
- add task-local timeout fallback (task_timeout_sec) in predefined task runner
- set indeed task template timeout to 28800 and document new config behavior
- add tests for first-seen ordering, index presence, and timeout fallback
update central DB and indeed task docs to match runtime behavior

--- a/src/zubot/predefined_tasks/indeed_daily_search/task_config.example.json
+++ b/src/zubot/predefined_tasks/indeed_daily_search/task_config.example.json
@@ -1,7 +1,8 @@
 {
   "name": "Indeed Daily Search Routine",
   "notes": "Config-driven Indeed search + decision + cover-letter + sheet upload pipeline.",
-  "seen_ids_limit": 200,
+  "task_timeout_sec": 28800,
+  "seen_ids_limit": 5000,
   "seen_provider": "indeed",
   "extraction_model_alias": "medium",
   "decision_model_alias": "medium",
