--- a/src/zubot/predefined_tasks/indeed_daily_search/task_config.example.json
+++ b/src/zubot/predefined_tasks/indeed_daily_search/task_config.example.json
@@ -20,96 +20,26 @@
   "cover_letter_upload_retry_backoff_sec": 1.0,
   "sheet_retry_attempts": 2,
   "sheet_retry_backoff_sec": 1.0,
-  "search_profiles": [
-    {
-      "profile_id": "software_engineer_columbus_oh",
-      "keyword": "Software Engineer",
-      "location": "Columbus, OH"
-    },
-    {
-      "profile_id": "software_engineer_cleveland_oh",
-      "keyword": "Software Engineer",
-      "location": "Cleveland, OH"
-    },
-    {
-      "profile_id": "software_engineer_phoenix_az",
-      "keyword": "Software Engineer",
-      "location": "Phoenix, AZ"
-    },
-    {
-      "profile_id": "software_engineer_scottsdale_az",
-      "keyword": "Software Engineer",
-      "location": "Scottsdale, AZ"
-    },
-    {
-      "profile_id": "software_engineer_boulder_co",
-      "keyword": "Software Engineer",
-      "location": "Boulder, CO"
-    },
-    {
-      "profile_id": "software_engineer_denver_co",
-      "keyword": "Software Engineer",
-      "location": "Denver, CO"
-    },
-    {
-      "profile_id": "data_analytics_columbus_oh",
-      "keyword": "Data Analytics",
-      "location": "Columbus, OH"
-    },
-    {
-      "profile_id": "data_analytics_cleveland_oh",
-      "keyword": "Data Analytics",
-      "location": "Cleveland, OH"
-    },
-    {
-      "profile_id": "data_analytics_phoenix_az",
-      "keyword": "Data Analytics",
-      "location": "Phoenix, AZ"
-    },
-    {
-      "profile_id": "data_analytics_scottsdale_az",
-      "keyword": "Data Analytics",
-      "location": "Scottsdale, AZ"
-    },
-    {
-      "profile_id": "data_analytics_boulder_co",
-      "keyword": "Data Analytics",
-      "location": "Boulder, CO"
-    },
-    {
-      "profile_id": "data_analytics_denver_co",
-      "keyword": "Data Analytics",
-      "location": "Denver, CO"
-    },
-    {
-      "profile_id": "ai_engineer_columbus_oh",
-      "keyword": "AI Engineer",
-      "location": "Columbus, OH"
-    },
-    {
-      "profile_id": "ai_engineer_cleveland_oh",
-      "keyword": "AI Engineer",
-      "location": "Cleveland, OH"
-    },
-    {
-      "profile_id": "ai_engineer_phoenix_az",
-      "keyword": "AI Engineer",
-      "location": "Phoenix, AZ"
-    },
-    {
-      "profile_id": "ai_engineer_scottsdale_az",
-      "keyword": "AI Engineer",
-      "location": "Scottsdale, AZ"
-    },
-    {
-      "profile_id": "ai_engineer_boulder_co",
-      "keyword": "AI Engineer",
-      "location": "Boulder, CO"
-    },
-    {
-      "profile_id": "ai_engineer_denver_co",
-      "keyword": "AI Engineer",
-      "location": "Denver, CO"
-    }
+  "search_locations": [
+    "Columbus, OH",
+    "Cleveland, OH",
+    "Boulder, CO",
+    "Denver, CO",
+    "Phoenix, AZ",
+    "Scottsdale, AZ",
+    "Raleigh, NC",
+    "Salt Lake City, UT",
+    "San Francisco, CA",
+    "Seattle, WA",
+    "Austin, TX"
+  ],
+  "search_keywords": [
+    "Software Engineer",
+    "Data Analytics",
+    "AI Engineer",
+    "Software Developer",
+    "Data Engineer",
+    "Machine Learning Engineer",
+    "Applied AI Engineer"
   ]
 }
